# ERP

./: .env.example  .env.staging  .gitignore  ANALYSIS_REPORT_2026_02_06.md  API_AUDIT_COMPREHENSIVE_MATRIX.md  BACKEND_API_TESTING_REPORT_SESSION50.md  CI_CD_REPAIR_COMPLETION_REPORT.md  CODE_QUALITY_REPORT_SESSION50.md  CODE_REFACTORING_SUMMARY_2026_02_20.md  DATABASE_SCHEMA_FIX_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  ERP_Project_Timeplan_2026-2027.xlsx  FINAL_QA_SETUP_SUMMARY_2026.md  FINAL_RESTART_STEPS.md  FINAL_TESTING_REPORT.md  FINISHGOOD_MOBILE_QUICK_SUMMARY.md  FINISHING_SCREEN_DOCUMENTATION.md  FINISHING_SCREEN_QUICK_START.md  FIXES_APPLIED_SESSION25.md  IMPLEMENTATION_PRIORITY_MATRIX.md  IMPLEMENTATION_STATUS_REPORT.md  LICENSE_HEADER.txt  LIVE_DEMO_QUICK_START.md  Makefile  NAVIGATION_INTEGRATION_AUDIT.md  PAGE_RENDERING_ISSUES.md  PALLET_SYSTEM_IMPLEMENTATION_COMPLETE.md  PHASE1_DIAGNOSTIC_REPORT.md  PHASE3_MOBILE_STATUS.md  PHASE4_BACKEND_INTEGRATION_TESTING_PLAN.md  PHASE4_TEST_EXECUTION_LOG.md  PRODUCTION_PROCESS_DOCUMENTATION_v2.md  PROGRESS_UPDATE.md  PROJECT_INDEX.md  QUICK_START_TESTING_DOCKER.md  README.md  README_QA.md  READY_FOR_TESTING.md  SESSION31_FINAL_DELIVERY_CHECKLIST.md  SESSION31_FINAL_VISUAL_SUMMARY.txt  (+125 more)
docs/: CodeQuality  (+199 more)
erp-softtoys/: .env.example  Dockerfile  IMPLEMENTATION_GUIDE.md  TEST_EXECUTION_SUMMARY.md  add_po_reference_columns.py  alembic.ini  apply_comprehensive_migration.py  apply_pallet_migration.py  apply_product_uom.py  apply_products_pallet_migration.py  apply_purchase_orders_pallet_migration.py  auto_migrate_database.py  check_admin.py  check_alembic.py  check_dummy_data.py  check_password_hashes.py  check_products_columns.py  cleanup_production_data.py  compare_bom_qty.py  comprehensive_cleanup.py  coverage.json  coverage.xml  create_dummy_data.py  create_seed_data_complete.py  debug_login.py  delete_operator_users.py  fix_bom_qty_from_excel.py  fix_bom_qty_v2.py  fix_password_hashes.py  import_bom_production.py  import_masterdata_from_excel.py  init_db.py  list_databases.py  list_tables.py  migrate_bom_category.py  pip_output.txt  pyproject.toml  pytest.ini  quick_seed.py  requirements-dev.txt  (+32 more)
erp-softtoys/alembic/: env.py
erp-softtoys/alembic/versions/: 001_add_spk_material_allocation.py  002_add_material_debt_approval_fields.py  004_extend_product_code_length.py  004_material_allocation.py  005_add_wip_routing_fields.py  006_add_production_datestamp_fields.py  007_add_spk_material_allocation.py  008_add_dual_trigger_flexible_target.py  009_dual_mode_po_bom_explosion.py  010_mo_flexible_target_week_destination.py  011_warehouse_finishing_2stage.py  012_rework_qc_system.py  013_material_debt_tracking.py  014_po_reference_system.py  5e9925f3de45_add_approval_workflow_tables_feature_2.py  add_wip_routing_001.py  migration_operator_to_admin_roles.sql
erp-softtoys/android-erp-app/: build.gradle.kts
erp-softtoys/android-erp-app/app/: build.gradle.kts
erp-softtoys/app/: main.py
erp-softtoys/app/api/: __init__.py  approvals.py
erp-softtoys/app/api/v1/: __init__.py  admin.py  audit.py  auth.py  barcode.py  bom_management.py  dashboard.py  embroidery.py  finishgoods.py  finishgoods_mobile.py  finishing.py  finishing_barcode.py  import_export.py  imports.py  kanban.py  masterdata.py  material_allocation.py  material_debt.py  material_shortage.py  pallet.py  ppic.py  purchasing.py  qa_convenience_endpoints.py  report_builder.py  reports.py  rework.py  warehouse.py  warehouse_endpoints.py  websocket.py
erp-softtoys/app/core/: audit_listeners.py  audit_middleware.py  base_production_service.py  config.py  database.py  datetime_utils.py  dependencies.py  environment_policy.py  permissions.py  role_requirements.py  schemas.py  security.py  websocket.py
erp-softtoys/app/core/migrations/: 001_add_daily_production_tables.sql
erp-softtoys/app/core/models/: __init__.py  audit.py  bom.py  daily_production.py  exceptions.py  finishing.py  kanban.py  manufacturing.py  material_debt.py  po_requests.py  production.py  products.py  quality.py  sales.py  transfer.py  users.py  warehouse.py
erp-softtoys/app/schemas/: finish_good_label.py  pallet.py
erp-softtoys/app/services/: approval_email_service.py  approval_service.py  bom_explosion_service.py  bom_service.py  daily_production_service.py  finish_good_label_service.py  masterdata_import_service.py  material_allocation_service.py  material_debt_service.py  pallet_service.py  permission_service.py  ppic_report_service.py  spk_edit_service.py
erp-softtoys/app/shared/: audit.py  i18n.py  timezone.py
erp-softtoys/scripts/: add_missing_fields.py  apply_dual_trigger_migration.sql  apply_migration.py  check_bom_hierarchy.py  check_demo_data.py  check_finished_goods.py  check_full_bom_chain.py  check_mo_schema.py  check_product_code_length.py  check_product_type_enum.py  check_products_table.py  check_schema.py  check_uom_enum.py  create_dashboard_materialized_views.sql  create_dashboard_mvs_fixed.sql  create_mvs_simple.sql  database_utils.py  drop_migration_enums.py  fix_alembic_version.py  fix_migrations.py  generate_wos_for_trial.py  import_bom_from_excel.py  list_enums.py  manual_stamp_database.py  migrate_rbac_to_pbac.py  rehash_passwords.py  rollback_pbac.sh  rotate_secret_key.py  seed_test_users.py  setup_dashboard_refresh_cron.sh  setup_key_rotation_cron.sh  test_01_data_integrity.py  test_bom_explosion.py  test_work_order_api.py  week1_production_trial.py  week4_material_flow_test.py
erp-softtoys/tests/: conftest.py  test_api_endpoints.py  test_approval.py  test_auth.py  test_barcode.py  test_bom_allocation.py  test_cutting_module.py  test_daily_production.py  test_e2e_workflows.py  test_finishing_module.py  test_material_debt.py  test_material_debt_api.py  test_material_debt_service.py  test_packing_module.py  test_phase1_dual_mode_po.py  test_phase1_endpoints.py  test_phase1_mo_triggers.py  test_phase1_smoke.py  test_qt09_protocol.py  test_services.py  test_sewing_module.py  test_spk_edit_service.py
erp-softtoys/tests/pbac/: test_endpoints.py  test_permission_service.py
(+662 files in other folders)
