[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-softtoys"
version = "7.0.0"
description = "ERP System for SoftToys Manufacturing - Production Ready"
requires-python = ">=3.10"
authors = [
    {name = "SoftToys Team", email = "erp@softtoys.com"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-p", "no:warnings"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "production: Production logic tests",
    "api: API tests",
    "ui: UI/UX tests",
    "stress: Stress tests",
    "smoke: Smoke tests",
    "critical: Critical path tests",
    "bva: Boundary Value Analysis tests",
    "integrity: Database integrity tests",
    "rbac: RBAC matrix tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "migrations"
]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "pydantic.*",
    "passlib.*",
    "jose.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "A",
    "C4",
    "T20",
    "SIM",
    "ARG",
    "PTH",
]
ignore = [
    "D100",  # Missing module docstring
    "D101",  # Missing class docstring
    "D102",  # Missing method docstring
    "D103",  # Missing function docstring
    "D104",  # Missing package docstring
    "D105",  # Missing magic method docstring
    "D106",  # Missing nested class docstring
    "D107",  # Missing __init__ docstring
    "D205",  # 1 blank line required between summary line and description
    "D401",  # First line should be imperative
    "D417",  # Missing argument documentation
    "E501",  # Line too long
    "E722",  # Do not use bare `except` (sometimes necessary for connection cleanup)
    "W505",  # Doc line too long
    "A003",  # Builtin shadowing
    "A002",  # Builtin shadowing in argument
    "A001",  # Builtin shadowing in variable
    "C901",  # Function too complex
    "E402",  # Module level import not at top of file
    "F811",  # Redefined while unused
    "N806"   # Variable name too capitalized
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["D", "A", "ARG"]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "C0111",
    "R0903",
    "R0913",
    "R0914",
    "W0613"
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 10
